# Vision-Jarvis

./: .clinerules  .env.example  .gitignore  README.md  frontend.pen  pyproject.toml
.claude/: settings.json
.claude/skills/tauri-astro-docs/: SKILL.md
.claude/skills/vision-jarvis-docs/: SKILL.md
.trellis/: .template-hashes.json
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/workspace/Vision-Jarvis/: index.md  journal-1.md
docs/: API-DESIGN.md  CHANGELOG.md  CODEMAP.md  DOCUMENT_AUDIT_REPORT.md  IMPLEMENTATION_STATUS.md  MIGRATION.md  OpenClaw记忆管理系统深度解析.md  PHASE_PROGRESS.md  README.md  SETUP_SUMMARY.md  UPDATES.md  allinone-prompt.md  事项驱动记忆系统设计.md  测试指南.md
docs/api/: README.md
docs/api/endpoints/: ai-config.md  commands.md  storage.md
docs/backend/: README.md
docs/backend/architecture/: overview.md
docs/backend/services/: README.md  ai-providers-service.md  ai-service.md  memory-service.md  notification-service.md  screenshot-service.md  storage-service.md
docs/database/: README.md  screenshot-analyses-field-flow.md
docs/frontend/: DOCUMENTATION_SUMMARY.md  README.md  architecture-v2-floating-windows.md  architecture.md
docs/frontend/components/: Asker.md  FloatingOrb.md  Header.md  README.md
docs/frontend/pages/: memory.md  popup-setting.md
docs/notes/: AGENTS.md
docs/planning/: 2026-02-16-memory-system-v3.md  2026-02-18-one-shot-analysis-adaptation.md  2026-02-19-frontend-code-improvements.md  2026-02-21-screen-analysis-output-fields.md  2026-02-28-file-management-system-audit.md  MASTER_PLAN.md
docs/plans/: 2026-02-06-floating-ball-multi-window-architecture.md  2026-02-08-floating-ball-refactor-plan.md  2026-02-09-settings-system-implementation-plan.md
docs/technical/specifications/: functional-specs.md  (+1 more)
vision-jarvis/: .gitignore  astro.config.mjs  package-lock.json  package.json
vision-jarvis/.astro/: data-store.json  settings.json
vision-jarvis/src/: debug-init.js
vision-jarvis/src-tauri/: AI_MODULE.md  Cargo.toml  ERROR_HANDLING.md  IMPLEMENTATION_PROGRESS.md  tauri.conf.json
vision-jarvis/src-tauri/capabilities/: default.json
vision-jarvis/src-tauri/src/: error.rs  lib.rs  main.rs
vision-jarvis/src-tauri/src/ai/: analyzer.rs.bak  client.rs  embeddings.rs  factory.rs  frame_extractor.rs  mod.rs  prompt.rs  provider.rs  providers.rs  traits.rs
vision-jarvis/src-tauri/src/ai/providers/: aihubmix.rs  claude.rs  gemini.rs  mod.rs  openai.rs  openrouter.rs  qwen.rs  siliconflow.rs
vision-jarvis/src-tauri/src/capture/: idle_watcher.rs  mod.rs  scheduler.rs  screen_recorder.rs  storage.rs  video_compressor.rs
vision-jarvis/src-tauri/src/commands/: ai_config.rs  memory.rs  mod.rs  notification.rs  recording.rs  screenshot.rs  settings.rs  storage.rs  window.rs
vision-jarvis/src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
vision-jarvis/src-tauri/src/memory/: activity_grouper.rs  chunker.rs  habit_detector.rs  hybrid_search.rs  index_manager.rs  long_term.rs  markdown_generator.rs  mod.rs  pipeline.rs  project_extractor.rs  scheduler.rs  screenshot_analyzer.rs  short_term.rs  summary_generator.rs  vector_store.rs
vision-jarvis/src-tauri/src/notification/: context.rs  delivery.rs  mod.rs  return_advisor.rs  rules.rs  scheduler.rs
vision-jarvis/src-tauri/src/notification/smart/: mod.rs  proactive.rs
vision-jarvis/src-tauri/src/settings/: config.rs  mod.rs
vision-jarvis/src-tauri/src/storage/: mod.rs
vision-jarvis/src-tauri/tests/: ai_tests.rs  video_analysis_test.rs
(+33 files in other folders)
