[tool.poetry]
name = "vision-jarvis"
version = "0.1.0"
description = "视觉驱动的AI秘书"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vision_jarvis", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# AI & API
anthropic = "^0.40.0"
# 图像处理
Pillow = "^11.0.0"
pyobjc-framework-Quartz = "^10.3"  # macOS屏幕捕获
imagehash = "^4.3.1"  # 图像去重
# GUI
PyQt6 = "^6.8.0"
pynput = "^1.7.7"  # 快捷键监听
# 异步和并发
aiofiles = "^24.1.0"
httpx = "^0.28.0"
# 任务调度
APScheduler = "^3.10.4"
# 配置和存储
pyyaml = "^6.0.2"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
# 日志
structlog = "^24.4.0"
# 工具
python-dotenv = "^1.0.1"
click = "^8.1.7"  # CLI框架

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[tool.poetry.scripts]
vision-jarvis = "vision_jarvis.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
